# Vipkey

./: .gitignore  CMakeLists.txt  LICENSE-COMMERCIAL  PROJECT_MAP.md  README.md  RELEASE_NOTES.md  generate_3d_icons.py  generate_3d_icons_fixed.py  generate_exact_icons.py  generate_exact_icons2.py  generate_main_icon.py  grep_results.json  rebrand_all.py  rename.py  rename_lower.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
docs/: SECURITY.md  SECURITY_FIXES-distillate.md  index.md  tray-icon-sync-analysis-v2-distillate.md  vietnamese-phonology-spec-distillate.md
docs/Architecture/: 1-core-design-principles.md  10-summary-the-two-questions.md  2-component-architecture.md  3-communication-architecture.md  4-startup-sequences.md  5-runtime-behavior.md  6-failure-handling.md  7-state-isolation.md  8-named-event-protocol.md  9-security-considerations.md  appendix-a-quick-reference.md  index.md
docs/CODING_RULES/: 1-namespace-organization.md  10-refactoring-checklist.md  2-memory-resource-management.md  3-error-handling.md  4-interface-based-design.md  5-struct-versioning.md  6-logging.md  7-debug-architecture.md  8-tsf-specific-rules.md  9-naming-conventions.md  index.md
docs/plans/: 2026-03-28-manual-test-matrix.md  2026-03-28-sendinput-universal-output.md  2026-04-12-double-key-preservation.md  2026-04-15-convert-tool-reselect-fix.md  2026-04-15-english-word-block-design.md  escape-state-refactor-blueprint.md  hot-path-optimization-plan.md  pre-tone-stop-final-check-distillate.md
docs/telex-test-specification/: category-1-basic-vowels-no-transformation.md  category-10-w-modifier-priority-7-levels.md  category-11-tone-placement-priority.md  category-12-tone-relocation.md  category-13-escape-mechanism.md  category-14-edge-cases.md  category-15-real-vietnamese-words.md  category-16-stop-final-tone-block-spellcheckenabled-true.md  category-2-circumflex-modifier.md  category-3-breve-modifier.md  category-4-horn-modifier.md  category-5-stroke-modifier.md  category-6-tone-marks.md  category-7-falling-diphthongs-tone-on-first-vowel.md  category-8-rising-diphthongs-tone-on-second-vowel.md  category-9-triphthongs.md  implementation-checklist.md  index.md  known-issues-to-investigate.md  test-execution-strategy.md  test-organization-strategy.md
src/app/: NexusKey.exe.manifest  NexusKey.rc  Vipkey.exe.manifest  Vipkey.rc  main.cpp  main_lite.cpp  resource.h  resources.cpp
src/app/classic/: ClassicAppOverridesDialog.cpp  ClassicAppOverridesDialog.h  ClassicConvertToolDialog.cpp  ClassicConvertToolDialog.h  ClassicDialogUtils.h  ClassicExcludedAppsDialog.cpp  ClassicExcludedAppsDialog.h  ClassicIconColorDialog.cpp  ClassicIconColorDialog.h  ClassicMacroTableDialog.cpp  ClassicMacroTableDialog.h  ClassicSettingsDialog.cpp  ClassicSettingsDialog.h  ClassicSpellExclusionsDialog.cpp  ClassicSpellExclusionsDialog.h  ClassicTheme.cpp  ClassicTheme.h  NexusKeyLite.exe.manifest  NexusKeyLite.rc  VipkeyLite.exe.manifest  VipkeyLite.rc  resource.h
src/app/dialogs/: AboutDialog.cpp  AboutDialog.h  AppOverridesDialog.cpp  AppOverridesDialog.h  ConvertToolDialog.cpp  ConvertToolDialog.h  DialogUtils.h  ExcludedAppsDialog.cpp  ExcludedAppsDialog.h  MacroTableDialog.cpp  MacroTableDialog.h  SciterSubDialog.cpp  SciterSubDialog.h  SettingsDialog.cpp  SettingsDialog.h  SpellExclusionsDialog.cpp  SpellExclusionsDialog.h  SubDialogConfig.h  TsfAppsDialog.cpp  TsfAppsDialog.h  WindowPickerDialog.cpp  WindowPickerDialog.h
src/app/helpers/: AppHelpers.h
src/app/sciter/: ScaleHelper.h  SciterArchive.cpp  SciterArchive.h  SciterHelper.cpp  SciterHelper.h
src/app/system/: DarkModeHelper.cpp  DarkModeHelper.h  FloatingIcon.cpp  FloatingIcon.h  HookEngine.cpp  HookEngine.h  HotkeyManager.cpp  HotkeyManager.h  QuickConvert.cpp  QuickConvert.h  StartupHelper.h  SubprocessHelper.h  SubprocessRunners.cpp  SubprocessRunners.h  ToastPopup.cpp  ToastPopup.h  TrayIcon.cpp  TrayIcon.h  TsfRegistration.cpp  TsfRegistration.h  UpdateChecker.cpp  UpdateChecker.h  UpdateInstaller.cpp  UpdateInstaller.h  UpdateSecurity.cpp  UpdateSecurity.h
src/app/ui/about/: about.css  about.html
src/app/ui/appoverrides/: appoverrides.css  appoverrides.html  appoverrides.js
src/app/ui/convert-tool/: convert-tool.css  convert-tool.html  convert-tool.js
src/app/ui/excludedapps/: excludedapps.css  excludedapps.html  excludedapps.js
src/app/ui/macro/: macro.css  macro.html  macro.js
src/app/ui/settings/: settings.css  settings.html  settings.js
src/core/: Debug.h  SmartSwitchManager.cpp  SmartSwitchManager.h  SmartSwitchState.h  Strings.cpp  Strings.h  SystemConfig.h  UIConfig.h  Version.h.in  WinStrings.h
src/core/config/: ConfigEvent.cpp  ConfigEvent.h  ConfigManager.cpp  ConfigManager.h  SettingMetadata.h  TypingConfig.h
src/core/engine/: CodeTableConverter.cpp  CodeTableConverter.h  EngineFactory.cpp  EngineFactory.h  EngineHelpers.h  EnglishProtection.h  IInputEngine.h  SpellChecker.cpp  SpellChecker.h  TelexEngine.cpp  TelexEngine.h  VietnameseTables.h  VniEngine.cpp  VniEngine.h
src/core/ipc/: SecurityHelpers.h  SharedConstants.h  SharedState.h  SharedStateManager.cpp  SharedStateManager.h
src/tsf/: ComUtils.h  CompositionEditSession.h  CompositionManager.cpp  CompositionManager.h  Define.h  DisplayAttribute.h  EditSession.h  EngineController.cpp  EngineController.h  Globals.cpp  Globals.h  InputScopeChecker.h  KeyEventSink.cpp  KeyEventSink.h  LanguageBarButton.cpp  LanguageBarButton.h  NexusKeyTSF.def  NexusKeyTSF.rc  Register.cpp  TextService.cpp  TextService.h  VipkeyTSF.def  VipkeyTSF.rc  dllmain.cpp  resource.h  stdafx.h
tests/: CodeTableConverterTest.cpp  ConfigEventTest.cpp  ConfigManagerTest.cpp  EngineBenchmarkTest.cpp  EngineFactoryTest.cpp  FeatureOptionsTest.cpp  SharedStateTest.cpp  SpellCheckerTest.cpp  TelexDictionaryTest.cpp  TelexEngineTest.cpp  TestHelper.h  UpdateSecurityTest.cpp  VniEngineTest.cpp
tools/: README.md  benchmark_ime.ps1  build_app.ps1  build_lite.ps1  png_to_ico.sh  release_tag.sh  test_gui_thread_info.cpp  update_sciter.sh
(+14 files in other folders)
